[package]
name = "wallpaper_scrapper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = "0.4.0"
grammers-session = "0.4.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.25.0"
mime = "0.3.16"
md5 = "0.7.0"